# warpgate

./: .gitignore  Cargo.toml  Makefile  deny.toml  lints.toml
.github/workflows/: build.yml  codeql.yml  docker.yml  eslint.yml  ossar.yml  osv-scanner.yml  pysa.yml  rust-clippy.yml  scorecard.yml  test.yml  trivy.yml
docker/: Dockerfile
tests/: pyproject.toml
warpgate/: Cargo.toml
warpgate-admin/: Cargo.toml
warpgate-admin/src/: lib.rs  main.rs
warpgate-admin/src/api/: ssh_keys.rs
warpgate-common/: Cargo.toml
warpgate-common/src/: lib.rs
warpgate-common/src/config/: mod.rs
warpgate-common/src/tls/: cert.rs  error.rs  mod.rs  rustls_helpers.rs  rustls_root_certs.rs
warpgate-common/src/types/: secret.rs
warpgate-core/: Cargo.toml
warpgate-core/src/protocols/: mod.rs
warpgate-database-protocols/: Cargo.toml
warpgate-database-protocols/src/io/: mod.rs
warpgate-database-protocols/src/mysql/io/: buf_mut.rs  mod.rs
warpgate-database-protocols/src/mysql/protocol/: capabilities.rs  packet.rs
warpgate-database-protocols/src/mysql/protocol/connect/: handshake_response.rs  ssl_request.rs
warpgate-database-protocols/src/mysql/protocol/response/: eof.rs  mod.rs  status.rs
warpgate-database-protocols/src/mysql/protocol/text/: column.rs
warpgate-db-entities/: Cargo.toml
warpgate-db-entities/src/: Target.rs
warpgate-db-migrations/: Cargo.toml
warpgate-protocol-http/: Cargo.toml
warpgate-protocol-http/src/: common.rs  proxy.rs  session.rs  session_handle.rs
warpgate-protocol-http/src/api/: targets_list.rs
warpgate-protocol-http/src/middleware/: cookie_host.rs  mod.rs  ticket.rs
warpgate-protocol-mysql/: Cargo.toml
warpgate-protocol-mysql/src/: client.rs  lib.rs  session.rs  stream.rs
warpgate-protocol-mysql/src/tls/: maybe_tls_stream.rs  rustls_helpers.rs  rustls_root_certs.rs
warpgate-protocol-postgres/: Cargo.toml
warpgate-protocol-postgres/src/: lib.rs
warpgate-protocol-ssh/: Cargo.toml
warpgate-protocol-ssh/src/: lib.rs
warpgate-protocol-ssh/src/client/: mod.rs
warpgate-protocol-ssh/src/server/: mod.rs  service_output.rs  session.rs
warpgate-sso/: Cargo.toml
warpgate-sso/src/: config.rs  lib.rs  sso.rs
warpgate-web/: Cargo.toml  eslint.config.js  package.json  svelte.config.js  tsconfig.json
warpgate-web/src/admin/: App.svelte  AuthPolicyEditor.svelte  CreateTicket.svelte  Log.svelte
warpgate-web/src/admin/lib/: openapi-schema.json
warpgate-web/src/admin/player/: TerminalRecordingPlayer.svelte
warpgate-web/src/common/: AuthBar.svelte  ConnectionInstructions.svelte  DelayedSpinner.svelte  ItemList.svelte  ThemeSwitcher.svelte  autosave.ts
warpgate-web/src/embed/: EmbeddedUI.svelte
warpgate-web/src/gateway/lib/: store.ts
warpgate/src/: config.rs  main.rs
warpgate/src/commands/: check.rs  client_keys.rs  common.rs  recover_access.rs  run.rs  setup.rs  test_target.rs
