cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "warpgate-fuzz",
    "warpgate",
    "warpgate-admin",
    "warpgate-common",
    "warpgate-core",
    "warpgate-db-migrations",
    "warpgate-db-entities",
    "warpgate-database-protocols",
    "warpgate-protocol-http",
    "warpgate-protocol-mysql",
    "warpgate-protocol-ssh",
    "warpgate-sso",
    "warpgate-web",
]
default-members = ["warpgate"]
resolver = "2"

[workspace.package]
rust-version = "1.81.0"  # MSRV:3
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/warp-tech/warpgate"
repository = "https://github.com/warp-tech/warpgate"

[profile.release]
lto = true
panic = "abort"
strip = "debuginfo"

[profile.coverage]
inherits = "dev"
rustflags = ["-Cinstrument-coverage"]
