[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
Flask = "^2.2.5"
flask-sock = "^0.5.2"
paramiko = "^3.4.0"
psutil = "^5.9.1"
pyotp = "^2.6.0"
pytest = "^7.1.2"
python = "^3.8"
PyYAML = "^6.0"
requests = "^2.28.1"
websocket-client = "^1.3.3"
werkzeug = "^3.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.2"
pytest = "^7.1.2"
black = "^22.10.0"

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = ["ignore::urllib3.exceptions.InsecureRequestWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
