[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-admin"
version = "0.10.2"

[dependencies]
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }
warpgate-protocol-ssh = { version = "*", path = "../warpgate-protocol-ssh" }

anyhow = { version = "1.0", features = ["std"] }
bytes = "1.3"
chrono = { version = "0.4", default-features = false }
futures = "0.3"
poem = { version = "1.3.50", features = [
    "cookie",
    "session",
    "anyhow",
    "websocket",
] }
poem-openapi = { version = "2.0", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "static-files",
] }
russh-keys = { version = "0.45.0", features = ["legacy-ed25519-pkcs8-parser", "vendored-openssl"] }
sea-orm = { version = "1.1.0-rc.1", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
sqlx = "0.8"
tokio = { version = "1.20", features = ["tracing"] }
tracing = "0.1"
uuid = { version = "1.2", features = ["v4", "serde"] }
regex = "1.6"
