[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-admin"
version = "0.10.2"

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
bytes = "1.7"
chrono = { version = "0.4", default-features = false }
futures = "0.3"
mime_guess = { version = "2.0", default-features = false }
poem = { version = "3.1", features = [
    "cookie",
    "session",
    "anyhow",
    "websocket",
] }
poem-openapi = { version = "5.1", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "static-files",
] }
russh-keys = { version = "0.45.0", features = ["legacy-ed25519-pkcs8-parser", "vendored-openssl"] }
sea-orm = { version = "1.0", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["tracing"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }
warpgate-protocol-ssh = { version = "*", path = "../warpgate-protocol-ssh" }
regex = "1.11"
