[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-common"
version = "0.9.1"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
bytes = "1.6"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
data-encoding = "2.6"
delegate = "0.12"
futures = "0.3"
humantime-serde = "1.1"
once_cell = "1.19"
password-hash = "0.5"
poem = { version = "3.0.1", features = ["rustls"] }
poem-openapi = { version = "5.0", features = [
    "chrono",
    "static-files",
    "swagger-ui",
    "uuid",
] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }
# rustls = { version = "0.21.12", features = ["dangerous_configuration"] }
rustls-pemfile = "2"
sea-orm = { version = "0.12.15", features = [
    "macros",
    "runtime-tokio-native-tls",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["tracing", "signal"] }
tokio-rustls = "0.26"
totp-rs = { version = "5.5", features = ["otpauth"] }
tracing = "0.1"
tracing-core = "0.1"
url = "2.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
warpgate-sso = { version = "*", path = "../warpgate-sso" }
webpki = "0.22"

[features]
offline = []
migrate = []
_tls-native-tls = []
