[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-common"
version = "0.10.2"

[dependencies]
warpgate-sso = { version = "*", path = "../warpgate-sso" }

anyhow = "1.0"
argon2 = "0.4"
async-trait = "0.1"
bytes = "1.3"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
data-encoding = "2.3"
delegate = "0.6"
humantime-serde = "1.1"
once_cell = "1.20"
password-hash = "0.4"
poem = { version = "1.3", features = ["rustls"] }
poem-openapi = { version = "2.0", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "static-files",
] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }
rustls-native-certs = "0.6"
sea-orm = { version = "1.1.0-rc.1", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
sqlx = "0.8"
thiserror = "1.0"
tokio = { version = "1.20", features = ["tracing"] }
tokio-rustls = "0.24"
totp-rs = { version = "5.0", features = ["otpauth"] }
tracing = "0.1"
url = "2.2"
uuid = { version = "1.2", features = ["v4", "serde"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki = { version = "0.22", features = ["std"] }

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
