[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-common"
version = "0.11.0"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
bytes = "1.7"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
data-encoding = "2.3"
delegate = "0.13"
humantime-serde = "1.1"
once_cell = "1.20"
password-hash = "0.5"
poem = { version = "3.1", features = ["rustls"] }
poem-openapi = { version = "5.1", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "static-files",
] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }
rustls-native-certs = "0.8"
sea-orm = { version = "1.0", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["tracing"] }
tokio-rustls = "0.26"
totp-rs = { version = "5.6", features = ["otpauth"] }
tracing = "0.1"
url = "2.2"
uuid = { version = "1.3", features = ["v4", "serde"] }
warpgate-sso = { version = "*", path = "../warpgate-sso" }
rustls = { version = "0.23", features = ["ring"], default-features = false}
rustls-pemfile = "2.2"
webpki = { version = "0.22", features = ["std"] }
aho-corasick = "1.1.3"
