[package]
name = "warpgate-database-protocols"
version = "0.9.1"
description = "Core of SQLx, the rust SQL toolkit. Just the database protocol parts."
license = "MIT OR Apache-2.0"
edition = "2021"
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>",
    "Daniel Akhterov <akhterovd@gmail.com>",
]

[dependencies]
bitflags = { version = "2.5", default-features = false }
bytes = "1.6"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "sink",
] }
memchr = { version = "2.7.4", default-features = false }
thiserror = "1.0"
tokio = { version = "1.38", features = ["io-util"] }
