[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-db-migrations"
publish = false
version = "0.9.1"

[lib]

[dependencies]
async-std = { version = "^1.12", features = ["attributes"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
sea-orm = { version = "0.12.15", features = [
    "macros",
    "runtime-tokio-native-tls",
    "with-chrono",
    "with-json",
    "with-uuid",
], default-features = false }
sea-orm-migration = { version = "0.12.15", default-features = false, features = [
    "cli",
] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[features]
offline = []
migrate = []
_tls-native-tls = []
