[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-db-migrations"
publish = false
version = "0.10.2"

[lib]

[dependencies]
async-std = { version = "^1.13", features = ["attributes"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
sea-orm = { version = "1.1.0-rc.1", features = [
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
], default-features = false }
sea-orm-migration = { version = "1.1.0-rc.1", default-features = false, features = [
    "cli",
] }
sqlx = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = "1.0"
