[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-http"
version = "0.9.1"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
cookie = "0.18"
data-encoding = "2.6"
delegate = "0.12"
futures = "0.3"
http = "1.1"
once_cell = "1.19"
percent-encoding = "2.3"
poem = { version = "^3.0.1", features = [
    "anyhow",
    "cookie",
    "embed",
    "rustls",
    "session",
    "sse",
    "websocket",
] }
poem-openapi = { version = "5.0", features = ["swagger-ui"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "stream"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.38", features = ["tracing", "signal"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
url = "2.5.1"
uuid = { version = "1.8", features = ["v4"] }
warpgate-admin = { version = "*", path = "../warpgate-admin" }
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }
warpgate-sso = { version = "*", path = "../warpgate-sso" }
warpgate-web = { version = "*", path = "../warpgate-web" }
