[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-http"
version = "0.10.2"

[dependencies]
warpgate-admin = { version = "*", path = "../warpgate-admin" }
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }
warpgate-sso = { version = "*", path = "../warpgate-sso" }
warpgate-web = { version = "*", path = "../warpgate-web" }

anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
cookie = "0.18"
delegate = "0.13"
futures = "0.3"
http = "1.0"
once_cell = "1.17"
percent-encoding = "2.1"
poem = { version = "3.1", features = [
    "cookie",
    "session",
    "anyhow",
    "rustls",
    "websocket",
    "sse",
    "embed",
] }
poem-openapi = { version = "5.1", features = ["swagger-ui"] }
regex = "1.6"
reqwest = { version = "0.12", features = [
    "rustls-tls-native-roots",
    "stream",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["tracing", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tungstenite = "0.24"
url = "2.4.1"
uuid = { version = "1.2", features = ["v4"] }
