[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-mysql"
version = "0.10.2"

[dependencies]
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-database-protocols = { version = "*", path = "../warpgate-database-protocols" }

anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1"
bytes = "1.3"
mysql_common = "0.32"
once_cell = "1.17"
password-hash = { version = "0.2", features = ["std"] }
rand = "0.8"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
rustls-pemfile = "1.0"
sha1 = "0.10"
thiserror = "1.0"
tokio = { version = "1.20", features = ["tracing", "signal"] }
tokio-rustls = "0.24"
tracing = "0.1"
uuid = { version = "1.2", features = ["v4"] }
webpki = "0.22"
