[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-mysql"
version = "0.10.2"

[dependencies]
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-database-protocols = { version = "*", path = "../warpgate-database-protocols" }

anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1"
bytes = "1.7"
mysql_common = "0.32"
password-hash = { version = "0.5", features = ["std"] }
rand = "0.8"
rustls = { version = "0.23", features = ["ring"], default-features = false }
sha1 = "0.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["tracing", "signal"] }
tokio-rustls = "0.26"
tracing = "0.1"
uuid = { version = "1.3", features = ["v4"] }
