[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-postgres"
version = "0.10.2"

[dependencies]
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }

anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1"
bytes = "1.3"
rustls = { version = "0.23", features = ["ring"], default-features = false }
rustls-native-certs = "0.8"
rustls-pemfile = "2.1"
pgwire = { version = "0.24", default-features = false, features = ["server-api"]}
thiserror = "1.0"
tokio = { version = "1.40", features = ["tracing", "signal"] }
tokio-rustls = "0.26"
tracing = "0.1"
uuid = { version = "1.2", features = ["v4"] }
