[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-ssh"
version = "0.9.1"

[dependencies]
ansi_term = "0.12"
anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1"
bimap = "0.6"
bytes = "1.6"
curve25519-dalek = "4.1.2" # pin due to build fail on x86
dialoguer = "0.11"
ed25519-dalek = "2.1.1" # pin due to build fail on x86 in 2.1
futures = "0.3"
# russh = { version = "0.43.0", features = ["vendored-openssl"], path = "../../russh/russh"}
russh = { version = "0.44.1", features = ["vendored-openssl"]}
# russh-keys = { version = "0.43.0", features = ["vendored-openssl"], path = "../../russh/russh"}
russh-keys = { version = "0.43.0", features = ["vendored-openssl"]}
sea-orm = { version = "0.12.15", features = [ "runtime-tokio-native-tls",], default-features = false }
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.38", features = ["tracing", "signal"] }
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }
zeroize = "^1.8"

[features]
offline = []
migrate = []
_tls-native-tls = []
