[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-ssh"
version = "0.10.2"

[dependencies]
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }

ansiterm = "0.12"
anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1"
bimap = "0.6"
bytes = "1.7"
dialoguer = "0.11"
futures = "0.3"
russh = { version = "0.45", features = ["legacy-ed25519-pkcs8-parser", "vendored-openssl", "flate2"] }
sea-orm = { version = "1.1.0-rc.1", features = [
    "runtime-tokio-rustls",
], default-features = false }
sqlx = "0.8"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.20", features = ["tracing", "signal"] }
tracing = "0.1"
uuid = { version = "1.3", features = ["v4"] }
zeroize = "^1.5"
