[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-sso"
version = "0.10.2"

[dependencies]
base64 = "0.22"
bytes = "1.7"
data-encoding = "2.3"
futures = "0.3.30"
jsonwebtoken = "9.3"
once_cell = "1.17"
openidconnect = { version = "3.5", features = ["reqwest", "rustls-tls", "accept-string-booleans"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["tracing", "macros"] }
tracing = "0.1"
