[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-sso"
version = "0.11.0"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
openidconnect = { version = "3.5", features = ["reqwest", "rustls-tls", "accept-string-booleans"] }
serde = "1.0"
once_cell = "1.20"
jsonwebtoken = "9.3"
data-encoding = "2.3"
futures = "0.3.30"
