[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate"
version = "0.9.1"

[dependencies]
ansi_term = "0.12"
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
atty = "0.2"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.14", features = ["yaml"], default-features = false }
console = { version = "0.15", default-features = false }
console-subscriber = { version = "0.3", optional = true }
data-encoding = "2.6"
dialoguer = "0.11"
futures = "0.3"
notify = "^6.1.1"
rcgen = { version = "0.13", features = ["zeroize"] }
sea-orm = { version = "0.12.15", default-features = false }
serde_json = "1.0"
serde_yaml = "0.9.34"
time = "0.3"
tokio = { version = "1.38", features = ["tracing", "signal", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
uuid = "1.8"
warpgate-admin = { version = "*", path = "../warpgate-admin" }
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }
warpgate-protocol-http = { version = "*", path = "../warpgate-protocol-http" }
warpgate-protocol-mysql = { version = "*", path = "../warpgate-protocol-mysql" }
warpgate-protocol-ssh = { version = "*", path = "../warpgate-protocol-ssh" }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[features]
default = ["sqlite"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
postgres = ["warpgate-core/postgres"]
mysql = ["warpgate-core/mysql"]
sqlite = ["warpgate-core/sqlite"]
