[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate"
version = "0.10.2"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
config = { version = "0.14", features = ["yaml"], default-features = false }
console = { version = "0.15", default-features = false }
console-subscriber = { version = "0.4", optional = true }
dialoguer = "0.11"
futures = "0.3"
notify = "6.1"
rcgen = { version = "0.13", features = ["pem", "zeroize"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
sea-orm = { version = "1.0", default-features = false }
time = "0.3"
tokio = { version = "1.40", features = ["tracing", "signal", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
uuid = "1.10"
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }
warpgate-protocol-http = { version = "*", path = "../warpgate-protocol-http" }
warpgate-protocol-mysql = { version = "*", path = "../warpgate-protocol-mysql" }
warpgate-protocol-postgres = { version = "*", path = "../warpgate-protocol-postgres" }
warpgate-protocol-ssh = { version = "*", path = "../warpgate-protocol-ssh" }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[features]
default = ["sqlite"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
postgres = ["warpgate-core/postgres"]
mysql = ["warpgate-core/mysql"]
sqlite = ["warpgate-core/sqlite"]